[package]
name = "absolute-path"
version = "0.1.0"
authors = ["Richard Cook <rcook@rcook.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = { git = "https://github.com/rcook/path-clean.git", rev = "dc73209d43a1ed5c46227078148ec6990d1f0b1e" }
